--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -3,17 +3,17 @@
 @import 'abstracts/mixins';
 @import 'abstracts/placeholders';
 
-@import 'vendors/bootstrap';
+@import 'vendors/bootstrap-4.4.1/bootstrap';
 @import 'vendors/jquery-ui';
 
-@import 'base/base';
 @import 'base/reset';
 @import 'base/typography';
+@import 'base/base';
 
 @import 'layout/navigation';
-@import 'layout/mainSection';
 @import 'layout/grid';
 @import 'layout/header';
+@import 'layout/main-section'; 
 @import 'layout/footer';
 @import 'layout/sidebar';
 @import 'layout/forms';
